force-app/main/default/objects/DA_genesis_Applications__b/DA_genesis_Applications__b.object-meta.xml
<CustomObject>
    <label>DA Application</label>
    <pluralLabel>DA Application</pluralLabel>
</CustomObject>