force-app/main/default/objects/DA_genesis_Applications__b/fields/Borrower_s_LastName__c.field-meta.xml
<CustomField>
    <fullName>Borrower_s_LastName__c</fullName>
    <label>Borrower&apos;s LastName</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>