force-app/main/default/objects/DA_genesis_Applications__b/fields/dcp_eligible__c.field-meta.xml
<CustomField>
    <fullName>dcp_eligible__c</fullName>
    <label>dcp_eligible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>