force-app/main/default/objects/DA_genesis_Applications__b/fields/genesis_Monthly_Income_Expense_Info__c.field-meta.xml
<CustomField>
    <fullName>genesis_Monthly_Income_Expense_Info__c</fullName>
    <label>Monthly Income &amp; Expense Info</label>
    <referenceTo>genesis__Monthly_Income_Expense_Info__c</referenceTo>
    <relationshipName>genesis_Monthly_Income_Expe1589329474936</relationshipName>
    <type>Lookup</type>
</CustomField>