force-app/main/default/objects/DA_genesis_Applications__b/fields/Send_Offer_expiry_notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Offer_expiry_notification__c</fullName>
    <label>Send Offer expiry notification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>