force-app/main/default/objects/DA_genesis_Applications__b/fields/Verification_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Verification_Complexity__c</fullName>
    <label>Verification Complexity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>